# storytime

./: .claude.json  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ENV_SETUP.md  README.md  REALTIME_API_INTEGRATION.md  VOICE_ASSISTANT_INTEGRATION.md  a-portrait-of-the-artist-as-a-young-man.txt  alembic.ini  browser_test.py  chapter_parser.py  character_analyzer.py  docker-compose.yml  example_usage.py  extracted_content_sample.txt  generate_openapi.py  get_extracted_text.py  linear_ticket_pipecat_integration.md  models.py  openapi.json  parsed_test_chapter.json  pyproject.toml  requirements.txt  ruff.toml  setup_instructions.md  test_full_pipeline.py  test_parser.py  test_player.html  test_realtime_integration.py  test_scraping.py  test_short_chapter.py  test_streaming.py  test_url_integration.py  test_war_and_peace.py  tts_generator.py  voice_assigner.py  voice_utils.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 2273b4060b15_add_audio_key_to_book.py  2411eb0df3d9_add_unified_job_management_tables.py  556295a40b3b_add_tutor_conversation_table.py  9fdc7d737873_create_all_tables_with_parent_id.py  c181b831cfcc_add_vector_store_tables.py  d5a58121007b_initial_schema_from_current_models.py  df4159089125_simplify_schema_remove_job_type_and_.py  f4e761e08e6e_add_users_table_and_user_id_to_books.py
chapter_data/chapter_01/: chapter.json  characters.json  segments.json  text.txt
chapter_data/chapter_data/chapter_01/: characters.json  segments.json  text.txt
client/: .env.example  Dockerfile  INTEGRATION_PLAN.md  codex-instruction.txt  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AudioPlayer.tsx
client/src/hooks/: useAudioPlayer.ts  useJobPolling.ts
client/src/pages/: BookDetails.tsx  Dashboard.tsx  JobDetails.tsx  Jobs.tsx  Library.tsx  Login.tsx  Register.tsx  Upload.tsx  VoiceAssistant.tsx
client/src/schemas/: index.ts
client/src/services/: api.ts
client/src/store/: index.ts
client/src/types/: api.ts
client/src/utils/: environment.ts
config/: deploy.yml
docs/: api_architecture.md  junjo_integration.md  junjo_native_parsing_plan.md
docs/api/: streaming.md
output/chapter_data/chapter_01/: characters.json  segments.json
output/openai/chapter_01/: chapter_01_playlist.m3u
scripts/: README.md  check-worker-logs.sh  docker  example_usage.py  fetch_voices.py  fix-stuck-job.sh  production  quick-diagnose.sh  setup-swap.sh  start.sh  test_celery_task.py
src/storytime/: __init__.py  database.py  models.py
src/storytime/api/: auth.py  chapters.py  jobs.py  knowledge.py  main.py  middleware.py  progress.py  settings.py  streaming.py  tts.py  utils.py  voice_assistant.py  voice_management.py  websocket_proxy.py
src/storytime/infrastructure/: __init__.py  spaces.py  voice_utils.py
src/storytime/mcp/: __init__.py  __main__.py  fastapi_integration.py  http_server.py  server.py
src/storytime/services/: __init__.py  book_analyzer.py  book_processor.py  chapter_parser.py  character_analyzer.py  content_analyzer.py  job_processor.py  preprocessing_service.py  (+6 more)
static/: index.html
static/assets/: index-BJzUHsxI.js  index-RFYqkWJl.js  index-t_DRX2aw.css
tests/: test_audio_streaming.py  test_book_analyzer.py  test_chapter_api.py  test_content_analyzer_gemini.py  test_full_pipeline.py  test_job_management_comprehensive.py  test_job_system_basic.py  test_job_system_final.py  test_job_system_integration.py  test_parser.py  test_pipecat_integration.py  test_pipecat_integration_simple.py  test_pipecat_performance.py  test_progress_tracking.py  test_results.json  test_short_chapter.py  test_streaming_integration.py  test_tts_api.py  test_tts_transcription.py  test_unified_job_system.py  test_voice_consistency.py  test_war_and_peace.py
tests/fixtures/: test_chapter.txt
tests/output/: parsed_chapter_1.json  parsed_war_and_peace_ch1.json
tts_providers/: __init__.py  base.py  elevenlabs_provider.py  openai_provider.py
war_and_peace_audio/chapter_01/: chapter_01_playlist.m3u
(+52 files in other folders)
