[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storytime"
version = "0.1.0"
description = "Audiobook parsing and TTS generation toolkit"
authors = [{ name = "Storytime" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.0.0",
    "openai~=1.74.0",  # Required for Pipecat compatibility
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "pytest>=7.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]",
    "pydantic-settings>=2.0.0",
    "elevenlabs>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "celery[redis]",
    "psycopg2-binary",
    "asyncpg",
    "sqlalchemy",
    "aioboto3>=12.0.0",
    "greenlet (>=3.2.2,<4.0.0)",
    "PyJWT[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.0",
    "google-genai>=0.2.0",
    "playwright>=1.40.0",
    "fastmcp>=2.9.0",
    "websockets~=13.1",
    "sse-starlette>=1.6.0",
    "pipecat-ai[silero]>=0.0.76",
    "soxr>=0.5.0",  # Replace resampy with soxr for Python 3.12+ compatibility
    "mcp>=1.0.0",
]

[project.optional-dependencies]
development = [
    "pytest",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.11.0",
    "mypy",
    "pre-commit",
    "alembic>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# Fix dependency conflicts by using compatible versions
constraint-dependencies = [
    "numba>=0.60.0",    # Force newer numba that supports Python 3.12+
    "llvmlite>=0.40.0", # Force newer llvmlite that supports Python 3.12+
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.0.0",
]
